# simbiota

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  README.md  installation.md
.cargo/: config
.github/workflows/: package.yml
client-lib/: Cargo.toml
client-lib/src/: client_config.rs  lib.rs  system_database.rs
client-lib/src/api/: cache.rs  detector.rs  hash.rs  mod.rs
client-lib/src/detector/: mod.rs  tlsh_detector.rs
control-protocol/: Cargo.toml
control-protocol/src/: lib.rs
fanotify-monitor/: Cargo.toml
fanotify-monitor/src/: lib.rs  monitor.rs
fanotify-monitor/src/low_level/: low_level_dummy.rs  low_level_linux.rs  mod.rs
fs-scanner/: Cargo.toml
fs-scanner/src/: main.rs
man/: conf.py  index.rst
man/pages/: simbiota-config.rst  simbiota.rst
package/common/DEBIAN/: conffiles  postinst  prerm
package/common/etc/simbiota/: client.yaml
package/common/usr/lib/systemd/system/: simbiota-update.service  simbiota-update.timer  simbiota.service
package/common/usr/sbin/: simbiota-update.sh
package/common/usr/share/bash-completion/completions/: simbiotactl
package/common/usr/share/fish/completions/: simbiotactl.fish
package/common/usr/share/zsh/vendor-completions/: _simbiotactl
package/deb-pi4-arm64/DEBIAN/: control
package/deb-pi4-armv7/DEBIAN/: control
simbiota/: Cargo.toml
simbiota-update/: Cargo.toml
simbiota-update/src/: main.rs  updater.rs  updater_config.rs
simbiota/src/: args.rs  control_server.rs  daemon_config.rs  detection_system.rs  email_alert.rs  logging.rs  main.rs  memory_detection_cache.rs  quarantine.rs  syslog_appender.rs
simbiotactl/: Cargo.toml  build.rs
simbiotactl/src/: cli.rs  main.rs
