[package]
name = "simbiota-clientlib"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
simbiota-tlsh = { git = "ssh://git@dev.ukatemi.com/simbiota/tlsh-rust.git", branch = "optimalizacio-go-brrrr" } # tlsh calculations
simbiota-database = { git = "ssh://git@dev.ukatemi.com/simbiota/database.git" } # database access
yaml-rust = "0.4.5" # config loading
