[package]
name = "simbiota-clientlib"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
simbiota-tlsh = { workspace = true }
simbiota-database = { workspace = true }
yaml-rust = "0.4.5" # config loading
