[package]
name = "fs-scanner"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
simbiota-clientlib = { path="../client-lib", version = "0.0.1" }
ctrlc = "3.2.5"
