[package]
name = "simbiota"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] } # for cli arguments

log = "0.4.17" # logging events
yaml-rust = "0.4.5" # config loading
simple_logger = "4.0.0" # startup and verbose logging
linked-hash-map = "0.5.6" # yaml config stuff
libc = "0.2.139" # linux api access
lettre = { version = "0.10.2", optional = true, default-features = false, features = ["rustls-tls", "smtp-transport", "builder"] } # email sending
log4rs = { version = "1.2.0", optional = true, default-features = false, features = ["console_appender", "file_appender", "pattern_encoder", "threshold_filter"] } # configurable loggign
syslog = { version = "6.0.1", optional = true }
chrono = { version = "0.4.23", default-features = false } # datetime formatting
once_cell = "1.17.0" # global static mut
inotify = { version = "0.10.0", features = [], default-features = false } # database change watcher
uuid = { version = "1.3.0", features = ["v4"] }
anyhow = "1.0.70"
serde_json = "1.0.96"
serde = { version = "1.0.164", features = ["derive"] }
crossbeam-channel = "0.5.8"

# SIMBIoTA stuff
simbiota-database = {workspace=true}
simbiota-clientlib = {workspace=true}
simbiota-tlsh = {workspace=true}
simbiota-monitor = {workspace=true}
simbiota-protocol = {workspace=true}


[features]
default = ["email_alert", "logging"]
email_alert = ["dep:lettre", "dep:syslog"]
logging = ["dep:log4rs"]
