[package]
name = "simbiotactl"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.1", features = ["derive"] }
simbiota-protocol = {workspace= true}
serde_json = "1.0.96"

[build-dependencies]
clap_complete = "4.3.1"
clap = { version = "4.3.1", features = ["derive"] }
